working merb 1.0.11 with dm 0.10.0
* code generations are possible again
* code generations are now linked to a style_collection
  allowing the codes to be used for multiple styles
  that are members of the given style_collection

--- a/app/views/admin/code_generations/index.html.erb
+++ b/app/views/admin/code_generations/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing CodeGenerations</h1>
+<h1>All CodeGenerations</h1>
  
 <table>
   <tr>
     <th>User</th>
-    <th>PostType</th>
+    <th>StyleCollection</th>
     <th>Amount</th>
     <th>Created At</th>
   </tr>
@@ -11,14 +11,14 @@
 <% @code_generations.each do |code_generation| %>
   <tr>
     <td><%=h code_generation.user_name %></td>
-    <td><%=h code_generation.post_type_name %></td>
+    <td><%=h code_generation.style_collection_name %></td>
     <td><%=h code_generation.amount %></td>
     <td><%=h code_generation.created_at %></td>
     
-    <td><%= link_to 'Show Codes', resource(code_generation, :codes) %></td>
+    <td><%= link_to 'Show Codes', resource(:admin, code_generation, :codes) %></td>
   </tr>
 <% end %>
 </table>
  
-<%= link_to 'Generate New Codes', resource(:code_generations, :new) %>
+<%= link_to 'Generate New Codes', resource(:admin, :code_generations, :new) %>
 
