added ability to specify the nr of possible posts per code

--- a/app/views/admin/codes/index.html.erb
+++ b/app/views/admin/codes/index.html.erb
@@ -5,6 +5,7 @@
     <th>Generator</th>
     <th>Style</th>
     <th>Secret</th>
+    <th>Nr of posts</th>
     <th>Created At</th>
     <th>Used On</th>
   </tr>
@@ -14,6 +15,7 @@
     <td><%=h code.generator_name %></td>
     <td><%=h code.style_collection_name %></td>
     <td><%=h code.secret %></td>
+    <td><%=h code.nr_of_posts %></td>
     <td><%=h code.created_at %></td>
     <td><%=h code.deleted_at %></td>
   </tr>
