--- a/app/views/admin/code_generations/new.html.erb
+++ b/app/views/admin/code_generations/new.html.erb
@@ -4,6 +4,7 @@
  
   <p><%= select :style_collection_id, :collection => StyleCollection.all, :text_method => :name, :value_method => :id %></p>
   <p><%= text_field :amount, :label => "Amount" %></p>
+  <p><%= text_field :nr_of_posts, :label => "Nr of Posts" %></p>
  
   <p>
     <%= submit "Create" %>
