--- a/app/views/admin/scenes/new.html.erb
+++ b/app/views/admin/scenes/new.html.erb
@@ -9,11 +9,11 @@
       <legend><span>Details</span></legend>
 
       <p>
-        <%= text_area :name, :label => "Name" %>
+        <%= text_field :name, :label => "Name" %>
       </p>
 
       <p>
-        <%= text_field :description, :label => "Description" %>
+        <%= text_area :description, :label => "Description" %>
       </p>
 
       <p>
