--- a/app/views/layout/application.html.erb
+++ b/app/views/layout/application.html.erb
@@ -1,12 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us" lang="en-us">
   <head>
-    <title>Fresh Merb App</title>
+    <title>linzblast.org</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen" charset="utf-8" />
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.1/swfobject.js" />
+    <script type="text/javascript">
+      swfobject.registerObject("myId", "9.0.0", "expressInstall.swf");
+    </script>
   </head>
   <body>
     <%#= message[:notice] %>
+    
+    <div id="wrapper">
+    <object id="game" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="1000" height="645">
+      <param name="movie" value="game.swf" />
+      <param name="allowFullScreen" value="true" />
+      <!--[if !IE]>-->
+      <object type="application/x-shockwave-flash" data="game.swf" width="1000" height="645">
+      <param name="allowFullScreen" value="true" />
+      <!--<![endif]-->
+        <p>No Flash!</p>
+      <!--[if !IE]>-->
+      </object>
+      <!--<![endif]-->
+    </object>
+    </div>
+
+
+    
     <%= catch_content :for_layout %>
   </body>
 </html>
