--- a/app/views/layout/dashboard.html.erb
+++ b/app/views/layout/dashboard.html.erb
@@ -1,12 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us" lang="en-us">
   <head>
-    <title>Fresh Merb App</title>
+    <title>linzblast.org | admin</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/yui/reset-fonts.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/yui/base-min.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/admin.css" type="text/css" media="screen" charset="utf-8" />
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" />
+    <script type="text/javascript">
+      
+    </script>
   </head>
   <body>
     <%#= message[:notice] %>
-    <%= catch_content :for_layout %>
+    <div id="wrapper">
+      <div id="sidebar">
+      </div>
+      <div id="content">
+        <%= catch_content :for_layout %>
+      </div>
+    </div>
   </body>
 </html>
