--- a/app/views/admin/codes/index.html.erb
+++ b/app/views/admin/codes/index.html.erb
@@ -13,7 +13,7 @@
 <% @codes.each do |code| %>
   <tr>
     <td><%=h code.generator_name %></td>
-    <td><%=h code.style_names.join(',') %></td>
+    <td><%= style_links(code) %></td>
     <td><%=h code.secret %></td>
     <td><%=h code.nr_of_posts %></td>
     <td><%=h code.created_at %></td>
