--- a/app/views/admin/code_generations/new.html.erb
+++ b/app/views/admin/code_generations/new.html.erb
@@ -1,16 +1,16 @@
-<h1>New CodeGeneration</h1>
+<h1>new code generation</h1>
  
 <%= form_for(@code_generation, :action => resource(:admin, :code_generations) ) do %>
  
   <p><%= select :style_collection_id, :collection => StyleCollection.all, :text_method => :name, :value_method => :id %></p>
-  <p><%= text_field :amount, :label => "Amount" %></p>
-  <p><%= text_field :nr_of_posts, :label => "Nr of Posts" %></p>
+  <p><%= text_field :amount, :label => "amount" %></p>
+  <p><%= text_field :nr_of_posts, :label => "nr of posts" %></p>
  
   <p>
-    <%= submit "Create" %>
+    <%= submit "create" %>
   </p>
   
 <% end =%>
  
-<%= link_to 'All CodeGenerations', resource(:admin, :code_generations) %>
+<%= link_to 'all code generations', resource(:admin, :code_generations) %>
 
