--- a/app/views/admin/games/index.html.erb
+++ b/app/views/admin/games/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Games</h1>
+<h1>games</h1>
  
 <table>
   <tr>
-    <th>Code</th>
-    <th>Created At</th>
-    <th>Used On</th>
+    <th>code</th>
+    <th>created at</th>
+    <th>used on</th>
   </tr>
  
 <% @games.each do |game| %>
