--- a/app/views/admin/scenes/new.html.erb
+++ b/app/views/admin/scenes/new.html.erb
@@ -1,4 +1,4 @@
-<h3>Add a Scene</h3>
+<h3>add a scene</h3>
 
 <div id="form-container">
 
@@ -6,23 +6,23 @@
     
     <fieldset>
 
-      <legend><span>Details</span></legend>
+      <legend><span>details</span></legend>
 
       <p>
-        <%= text_field :name, :label => "Name" %>
+        <%= text_field :name, :label => "name" %>
       </p>
 
       <p>
-        <%= text_area :description, :label => "Description" %>
+        <%= text_area :description, :label => "description" %>
       </p>
 
       <p>
-        <%= text_field :uri, :label => "URI" %>
+        <%= text_field :uri, :label => "uri" %>
       </p>
 
     </fieldset>
     
-    <%= submit "Add" %>
+    <%= submit "add" %>
 
   <% end =%>
   
