--- a/app/views/admin/scenes/show.html.erb
+++ b/app/views/admin/scenes/show.html.erb
@@ -1,12 +1,12 @@
-<h1>Showing Scene</h1>
+<h1>showing scene</h1>
 
-<label>Name</label>
+<label>name</label>
 <p><%=h @scene.name %></p>
 
-<label>Description</label>
+<label>description</label>
 <p><%=h @scene.description %></p>
 
-<label>URI</label>
+<label>uri</label>
 <p><%=h @scene.uri %></p>
  
-<%= link_to 'All Scenes', resource(:admin, :scenes) %>
+<%= link_to 'all scenes', resource(:admin, :scenes) %>
