--- a/app/views/admin/styles/index.html.erb
+++ b/app/views/admin/styles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing Styles</h1>
+<h1>styles</h1>
  
 <table>
   <tr>
@@ -17,9 +17,9 @@
     <td><%=h style.distortion %></td>
     <td><%=h style.ttl %></td>
  
-    <td><%= link_to 'Show Style', resource(:admin, style) %></td>
+    <td><%= link_to 'show style', resource(:admin, style) %></td>
   </tr>
 <% end %>
 </table>
  
-<%= link_to 'New Style', resource(:admin, :styles, :new) %>
+<%= link_to 'new style', resource(:admin, :styles, :new) %>
