--- a/app/views/admin/styles/new.html.erb
+++ b/app/views/admin/styles/new.html.erb
@@ -1,4 +1,4 @@
-<h3>Add a Style</h3>
+<h3>add a style</h3>
 
 <div id="form-container">
 
@@ -6,7 +6,7 @@
     
     <fieldset>
 
-      <legend><span>Details</span></legend>
+      <legend><span>details</span></legend>
 
       <p>
         <%= text_field :name, :label => "name" %>
@@ -30,7 +30,7 @@
 
     </fieldset>
     
-    <%= submit "Add" %>
+    <%= submit "add" %>
 
   <% end =%>
   
