--- a/app/views/admin/styles/show.html.erb
+++ b/app/views/admin/styles/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Showing Style</h1>
+<h1>showing style</h1>
 
 <label>name</label>
 <p><%=h @style.name %></p>
@@ -15,4 +15,4 @@
 <label>ttl</label>
 <p><%=h @style.ttl %></p>
  
-<%= link_to 'All Styles', resource(:admin, :styles) %>
+<%= link_to 'all styles', resource(:admin, :styles) %>
