--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Listing Posts</h1>
+<h1>posts</h1>
  
 <table>
   <tr>
-    <th>Body</th>
-    <th>PostType</th>
-    <th>Background Color</th>
-    <th>Text Color</th>
-    <th>Created At</th>
+    <th>body</th>
+    <th>style</th>
+    <th>background color</th>
+    <th>text color</th>
+    <th>created at</th>
   </tr>
  
 <% @posts.each do |post| %>
@@ -17,9 +17,9 @@
     <td><%=h post.text_color %></td>
     <td><%=h post.created_at %></td>
  
-    <td><%= link_to 'Show', resource(:admin, post) %></td>
+    <td><%= link_to 'show', resource(:admin, post) %></td>
   </tr>
 <% end %>
 </table>
  
-<%= link_to 'New Post', resource(:admin, :posts, :new) %>
+<%= link_to 'new post', resource(:admin, :posts, :new) %>
