--- a/app/views/admin/scenes/index.html.erb
+++ b/app/views/admin/scenes/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Listing Scenes</h1>
+<h1>scenes</h1>
  
 <table>
   <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>URI</th>
-    <th>Created At</th>
-    <th>Updated At</th>
+    <th>name</th>
+    <th>description</th>
+    <th>uri</th>
+    <th>created at</th>
+    <th>updated at</th>
   </tr>
  
 <% @scenes.each do |scene| %>
@@ -17,9 +17,9 @@
     <td><%=h scene.created_at %></td>
     <td><%=h scene.updated_at %></td>
  
-    <td><%= link_to 'Show Scene', resource(:admin, scene) %></td>
+    <td><%= link_to 'show scene', resource(:admin, scene) %></td>
   </tr>
 <% end %>
 </table>
  
-<%= link_to 'New Scene', resource(:admin, :scenes, :new) %>
+<%= link_to 'new scene', resource(:admin, :scenes, :new) %>
