unified link naming

--- a/app/views/admin/code_generations/index.html.erb
+++ b/app/views/admin/code_generations/index.html.erb
@@ -15,7 +15,7 @@
     <td><%=h code_generation.amount %></td>
     <td><%=h code_generation.created_at %></td>
     
-    <td><%= link_to 'show codes', resource(:admin, code_generation, :codes) %></td>
+    <td><%= link_to 'show', resource(:admin, code_generation, :codes) %></td>
   </tr>
 <% end %>
 </table>
