--- a/app/views/admin/styles/index.html.erb
+++ b/app/views/admin/styles/index.html.erb
@@ -17,7 +17,7 @@
     <td><%=h style.distortion %></td>
     <td><%=h style.ttl %></td>
  
-    <td><%= link_to 'show style', resource(:admin, style) %></td>
+    <td><%= link_to 'show', resource(:admin, style) %></td>
   </tr>
 <% end %>
 </table>
