--- a/app/views/admin/scenes/index.html.erb
+++ b/app/views/admin/scenes/index.html.erb
@@ -17,7 +17,7 @@
     <td><%=h scene.created_at %></td>
     <td><%=h scene.updated_at %></td>
  
-    <td><%= link_to 'show scene', resource(:admin, scene) %></td>
+    <td><%= link_to 'show', resource(:admin, scene) %></td>
   </tr>
 <% end %>
 </table>
