--- a/app/views/layout/dashboard.html.erb
+++ b/app/views/layout/dashboard.html.erb
@@ -10,6 +10,7 @@
     <script type="text/javascript">
       
     </script>
+    <%= include_required_js %>
   </head>
   <body>
     <%#= message[:notice] %>
