show scene image on admin/scenes/1

--- a/app/views/admin/scenes/show.html.erb
+++ b/app/views/admin/scenes/show.html.erb
@@ -8,5 +8,7 @@
 
 <label>uri</label>
 <p><%=h @scene.uri %></p>
+
+<img src="<%= @scene.image.url(:small) %>" alt="<%= @scene.name %>" />
  
 <%= link_to 'all scenes', resource(:admin, :scenes) %>
