--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,17 +1,25 @@
-<h1>Games</h1>
+<h3>Games</h3>
  
-<table>
-  <tr>
-    <th>Code</th>
-    <th>Created At</th>
-    <th>Used On</th>
-  </tr>
- 
-<% @games.each do |game| %>
-  <tr>
-    <td><%=h game.code.secret %></td>
-    <td><%=h game.created_at %></td>
-    <td><%=h game.deleted_at %></td>
-  </tr>
-<% end %>
+<table class="resources">
+	<thead>
+	  <tr>
+	    <th>Code</th>
+	    <th>Created At</th>
+	    <th>Used On</th>
+	  </tr>
+	</thead>#
+	<tfoot>
+		<tr>
+			<td></td>
+		</tr>
+	</tfoot>
+	<tbody>
+	<% @games.each do |game| %>
+	  <tr>
+	    <td><%=h game.code.secret %></td>
+	    <td class="date"><%=h game.created_at %></td>
+	    <td class="date"><%=h game.deleted_at %></td>
+	  </tr>
+	<% end %>
+	</tbody>
 </table>
