--- a/app/views/admin/code_generations/index.html.erb
+++ b/app/views/admin/code_generations/index.html.erb
@@ -1,24 +1,32 @@
 <h1>code generations</h1>
  
-<table>
-  <tr>
-    <th>user</th>
-    <th>styles</th>
-    <th>amount</th>
-    <th>created at</th>
-  </tr>
- 
-<% @code_generations.each do |code_generation| %>
-  <tr>
-    <td><%=h code_generation.user_name %></td>
-    <td><%= style_links(code_generation) %></td>
-    <td><%=h code_generation.amount %></td>
-    <td><%=h code_generation.created_at %></td>
-    
-    <td><%= link_to 'show', resource(:admin, code_generation, :codes) %></td>
-  </tr>
-<% end %>
+<table class="resources">
+	<thead>
+	  <tr>
+	    <th>user</th>
+	    <th>styles</th>
+	    <th>amount</th>
+	    <th>created at</th>
+			<th>action</th>
+	  </tr>
+	</thead>
+	<tfoot>
+		<tr>
+			<td></td>
+		</tr>
+	</tfoot>
+	<tbody>
+		<% @code_generations.each do |code_generation| %>
+		  <tr>
+		    <td><%=h code_generation.user_name %></td>
+		    <td><%= style_links(code_generation) %></td>
+		    <td class="number"><%=h code_generation.amount %></td>
+		    <td class="date"><%=h code_generation.created_at %></td>
+		    
+		    <td class="action"><%= link_to 'show', resource(:admin, code_generation, :codes) %></td>
+		  </tr>
+		<% end %>		
+	</tbody>
 </table>
  
 <%= link_to 'generate new codes', resource(:admin, :code_generations, :new) %>
-
