--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,25 +1,32 @@
-<h1>posts</h1>
+<h3>posts</h3>
  
-<table>
-  <tr>
-    <th>body</th>
-    <th>style</th>
-    <th>background color</th>
-    <th>text color</th>
-    <th>created at</th>
-  </tr>
- 
-<% @posts.each do |post| %>
-  <tr>
-    <td><%=h post.body %></td>
-    <td><%=h post.style_name %></td>
-    <td><%=h post.background_color %></td>
-    <td><%=h post.text_color %></td>
-    <td><%=h post.created_at %></td>
- 
-    <td><%= link_to 'show', resource(:admin, post) %></td>
-  </tr>
-<% end %>
+<table class="resources">
+	<thead>
+	  <tr>
+	    <th>body</th>
+	    <th>style</th>
+	    <th>background color</th>
+	    <th>text color</th>
+	    <th>created at</th>
+			<th>action</th>
+	  </tr>
+	</thead>
+  <tfoot>
+  	<tr><td></td></tr>
+  </tfoot>
+	<tbody>
+		<% @posts.each do |post| %>
+		  <tr>
+		    <td><%=h post.body %></td>
+		    <td><%=h post.style_name %></td>
+		    <td><%=h post.background_color %></td>
+		    <td><%=h post.text_color %></td>
+		    <td class="date"><%=h post.created_at %></td>
+		 
+		    <td class="action"><%= link_to 'show', resource(:admin, post) %></td>
+		  </tr>
+		<% end %>
+</tbody>
 </table>
  
 <%= link_to 'new post', resource(:admin, :posts, :new) %>
