--- a/app/views/scenes/index.html.erb
+++ b/app/views/scenes/index.html.erb
@@ -1,15 +1,23 @@
-<h1>All Scenes</h1>
+<h3>All Scenes</h3>
  
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-  </tr>
- 
-<% @scenes.each do |scene| %>
-  <tr>
-    <td><%=h scene.name %></td>
-    <td><%=h scene.description %></td>
-  </tr>
-<% end %>
+<table class="resources">
+	<thead>
+	  <tr>
+	    <th>Name</th>
+	    <th>Description</th>
+	  </tr>
+	</thead>
+	<tfoot>
+		<tr>
+			<td></td>
+		</tr>
+	</tfoot>
+	<tbody>
+	<% @scenes.each do |scene| %>
+	  <tr>
+	    <td><%=h scene.name %></td>
+	    <td><%=h scene.description %></td>
+	  </tr>
+	<% end %>
+	</tbody>
 </table>
