--- a/app/views/layout/dashboard.html.erb
+++ b/app/views/layout/dashboard.html.erb
@@ -37,12 +37,12 @@
 							<dd><%= link_to 'code generations', resource(:admin, :code_generations) %></dd>
 							<dd><%= link_to 'codes', resource(:admin, :codes) %></dd>
 							<dd><%= link_to 'games', resource(:admin, :games) %></dd>
-							<dd><%= link_to 'scenes', resource(:admin, :scenes) %></dd>
+							<dd><%= link_to 'stages', resource(:admin, :stages) %></dd>
 							<dd><%= link_to 'posts', resource(:admin, :posts) %></dd>
 							<dd><%= link_to 'styles', resource(:admin, :styles) %></dd>
 							<dt>new stuff</dt>
 							<dd><%= link_to 'code generation', resource(:admin, :code_generations, :new) %></dd>
-							<dd><%= link_to 'scene', resource(:admin, :scenes, :new) %></dd>
+							<dd><%= link_to 'stage', resource(:admin, :stages, :new) %></dd>
 							<dd><%= link_to 'style', resource(:admin, :styles, :new) %></dd>
 							<dd><%= link_to 'post', resource(:admin, :posts, :new) %></dd>
 				    </dl>
