--- a/app/views/scenes/show.html.erb
+++ b/app/views/scenes/show.html.erb
@@ -1,10 +1,10 @@
-<h3>Showing Scene</h3>
+<h3>showing stage</h3>
 
-<label>Name</label>
-<p><%=h @scene.name %></p>
+<label>name</label>
+<p><%=h @stage.name %></p>
 
-<label>Description</label>
-<p><%=h @scene.description %></p>
+<label>description</label>
+<p><%=h @stage.description %></p>
 
  
-<%= link_to 'All Scenes', resource(:scenes) %>
+<%= link_to 'all stages', resource(:stages) %>
