--- a/app/views/layout/application.html.erb
+++ b/app/views/layout/application.html.erb
@@ -3,7 +3,9 @@
   <head>
     <title>linzblast.org</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/yui/reset-fonts.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/yui/base-min.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/application.css" type="text/css" media="screen" charset="utf-8" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.1/swfobject.js" />
     <script type="text/javascript">
       swfobject.registerObject("myId", "9.0.0", "expressInstall.swf");
